--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,17 @@ img {
     width: 200px;
     height: 200px;
 }
+
+.container {
+    padding-top: 15px;
+}
+
+.sports {
+    padding: 10px;
+    margin: 3px;
+}
+
+#add-sport {
+    padding: 10px;
+    margin-left: 10px;
+}
